fix: height fixes on mobile device

--- a/style/style.css
+++ b/style/style.css
@@ -371,7 +371,7 @@ header.welcome-section{
 
 .scroll-down-icon {
     position: absolute;
-    bottom: 10%;
+    bottom: 10rem;
     left: 50%;
     translate: -50% 0;
     width: 40px;
